New employee, sitemap and location updates.

--- a/about-us.html
+++ b/about-us.html
@@ -10,7 +10,7 @@
    <!-- Latest compiled and minified CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
    <link rel="stylesheet" href="css/default.css"/>
-  <title>Northeastern Counseling Services | Ellicott City, MD | Mechanicsburg, PA</title>
+  <title>Northeastern Counseling Services | Mechanicsburg, PA | Ellicott City, MD</title>
 </head>
 <body>
   <header>
@@ -74,6 +74,58 @@
         </p>
       </section>
       <section>
+        <h2>Nicole Benner, Registered Dietitian</h2>
+        <img class="headshot" src="images/NicoleBennerpic1.jpeg" alt="Picture of Nicole Benner">
+        <p>
+          Nicole is a Registered Dietitian who is passionate ​about helping her clients find peace with 
+          food in order to meet their nutrition and wellness goals. She provides medical nutrition 
+          therapy based on individual needs and incorporates intuitive eating, a non-diet approach. Her 
+          nutrition philosophy promotes "all foods fit". She encourages clients to eat real, whole food as 
+          a source of nourishment as well as a source of enjoyment and break free from the diet cycle.
+        </p><p>
+          Nicole completed her Bachelors of Science Degree in Nutrition and Dietetics from Penn State 
+          University in 1996 and subsequently completed her Dietetic Internship with Aramark in the 
+          Greater Philadelphia area in 1997.
+        </p><p>
+          Nicole has over 10 years of Nutrition Counseling experience partnering with clients in hospitals, 
+          outpatient nutrition counseling and community nutrition settings. Currently, she holds a position 
+          at Messiah College where she counsels students who struggle with eating disorders. ​
+        </p><p>
+          Nicole is committed to building a safe environment in which her clients can explore their 
+          relationship with food without judgment or criticism. In addition, she strives to stay current on 
+          research and treatment modalities through continuing education and trainings. It is her desire to 
+          continue specialization in the treatment of eating disorders. She is a member of the Academy of 
+          Nutrition and Dietetics and the International Association of Eating Disorder Professionals
+          (<a href="http://www.iaedp.com/" title="IAEDP">IAEDP</a>).​ ​
+        </p>
+      </section>
+      <section>
+        <h2>Chad Briggs, Clinician</h2>
+        <img class="headshot" src="images/ChadBriggsPic.jpg" alt="Picture of Chad Briggs">
+        <p>
+          Chad Briggs is a first generation college graduate from a small agricultural community in the
+          heart of central Pennsylvania. He completed Bachelors of Science degree in Psychology at Penn
+          State University in 2006. He attended  graduate school at Shippensburg and completed his
+          Masters of Social work in 2017. Chad became a Licensed Social Worker in February of 2019. He
+          has a large background of work experience in the areas of child welfare and inpatient mental
+          health treatment. Chad is an advocate for mental health and wellness and reducing the stigma
+          of receiving mental health treatment.
+        </p><p>
+          Chad has a strong focus on helping children and families to identify therapeutic needs and
+          working collaboratively on finding solutions through the use of CBT, mindfulness, and Narrative
+          based approaches. He also has a strong interest in the area of trauma, it's subjectivity, and
+          it's effects on development and perception
+        </p><p>
+          Chad spends his free time at home attempting to be an amateur landscaper, hiking, watching
+          movies, or enjoying live music. He's also a wanna be foodie so he's always looking for unique
+          and creative cuisine. Chad also has a passion for the performing arts and has done live theater
+          for many years including several dinner theater shows. He is a self professed game show lover
+          and enjoys watching and participating in trivia shows. Chad has tried out for both Teen
+          Jeopardy and Who Wants to Be A Millionaire. Sadly he didn't make it past the initial round but
+          that hasn't stopped him from continuing to try.
+        </p>
+      </section>
+      <section>
         <h2>Megan Cline, Clinician</h2>
         <img class="headshot" src="images/MeganCline.jpg" alt="Picture of Megan Cline">
         <p>
@@ -103,32 +155,6 @@
         </p>
       </section>
       <section>
-        <h2>Nicole Benner, Registered Dietitian</h2>
-        <img class="headshot" src="images/NicoleBennerpic1.jpeg" alt="Picture of Nicole Benner">
-        <p>
-          Nicole is a Registered Dietitian who is passionate ​about helping her clients find peace with 
-          food in order to meet their nutrition and wellness goals. She provides medical nutrition 
-          therapy based on individual needs and incorporates intuitive eating, a non-diet approach. Her 
-          nutrition philosophy promotes "all foods fit". She encourages clients to eat real, whole food as 
-          a source of nourishment as well as a source of enjoyment and break free from the diet cycle.
-        </p><p>
-          Nicole completed her Bachelors of Science Degree in Nutrition and Dietetics from Penn State 
-          University in 1996 and subsequently completed her Dietetic Internship with Aramark in the 
-          Greater Philadelphia area in 1997.
-        </p><p>
-          Nicole has over 10 years of Nutrition Counseling experience partnering with clients in hospitals, 
-          outpatient nutrition counseling and community nutrition settings. Currently, she holds a position 
-          at Messiah College where she counsels students who struggle with eating disorders. ​
-        </p><p>
-          Nicole is committed to building a safe environment in which her clients can explore their 
-          relationship with food without judgment or criticism. In addition, she strives to stay current on 
-          research and treatment modalities through continuing education and trainings. It is her desire to 
-          continue specialization in the treatment of eating disorders. She is a member of the Academy of 
-          Nutrition and Dietetics and the International Association of Eating Disorder Professionals
-          (<a href="http://www.iaedp.com/" title="IAEDP">IAEDP</a>).​ ​
-        </p>
-      </section>
-      <section>
         <h2>James Corbin, Clinician</h2>
         <img class="headshot" src="images/Jamescorbinpic1.JPG" alt="Picture of James Corbin">
         <p>
@@ -148,6 +174,32 @@
           the Harrisburg Regional Planning Team for Operation Military Kids.​​​​ 
         </p>
       </section>        
+      <section>
+        <h2>Katie Green, Clinician</h2>
+        <img class="headshot" src="images/KatieGreen.jpg" alt="Picture of Katie Green">
+        <p>
+          Kathleen (Katie) Green graduated from Shippensburg University in 2010 with her Bachelor of
+          Science in Psychology. In 2018 she obtained her Masters graduate degree in Social Work and
+          became a licensed social worker in February of 2019. 
+        </p><p>
+          Katie has clinical experience treating individuals, couples, families, and groups in multiple
+          behavioral health care settings over the past 10 years. She has had experience in such settings
+          as an inpatient psychiatric hospital, home care settings, and in the school setting. Her
+          experience in the inpatient psychiatric hospital has helped her develop an understanding and
+          sensitivity to the needs of vulnerable populations and is trained in cultural competency
+          awareness. She is sensitive of and affirming of individuals experiencing (LGBTQ+) gender
+          identity issues. Katie takes a holistic approach, viewing the client as the center of treatment
+          and recognizes that each individual’s journey is different and unique. Katie has received formal
+          training and has experience in various therapy processes such as Dialectical Behavioral Therapy,
+          Cognitive Behavioral Therapy, Interpersonal Therapy, and Family Therapies. She is able to take a
+          creative approach that endeavors to foster rapport, trust, empathy, and respect within the
+          therapeutic relationship.
+        </p><p>      
+          In her spare time, Katie enjoys traveling to different states and exploring national parks with
+          her family. She enjoys spending time with her dog, taking him for walks, and photography. When she
+          isn’t outside enjoying the fresh air, she can be found watching movies or attending live concerts.     
+        </p>
+      </section>
       <section>
         <h2>Denise Haas, Clinician</h2>
         <img class="headshot" src="images/DeniseHaasPic.jpg" alt="Picture of Denise Haas">
@@ -172,50 +224,6 @@
           positive way.
         </p><p>
           In her spare time, she enjoys photography, being outside and spending time with family.
-        </p>
-      </section>
-      <section>
-        <h2>Selene Scavitto, Clinician</h2>
-        <img class="headshot" src="images/SeleneScavitto.jpg" alt="Picture of Selene Scavito">
-        <p>
-          Selene graduated from Shippensburg University with her MSW and currently is a LSW. Selene has
-          experience working in a variety of settings including as Director of Social Services at a
-          Continuing Care Retirement Community, hospital setting, and outpatient private practice. She
-          enjoys working with adolescents and adults, helping them find their way through life's
-          challenges, by teaching new ways to cope and setting realistic goals. She strives to offer a
-          non-judgmental, culturally sensitive environment conducive to exploration and growth.
-        </p><p>
-          In her spare time, Selene enjoys spending time with her family and is active in raising
-          awareness of the mental health needs of military members and veterans. Selene coordinates
-          a yearly Ruck March which supports efforts in the fight against suicide. The March raises
-          funds for non-profit organizations that serve veterans and to raises awareness regarding the
-          prevalence of veteran suicide and mental health issues. 
-        </p>
-      </section>
-      <section>
-        <h2>Chad Briggs, Clinician</h2>
-        <img class="headshot" src="images/ChadBriggsPic.jpg" alt="Picture of Chad Briggs">
-        <p>
-          Chad Briggs is a first generation college graduate from a small agricultural community in the
-          heart of central Pennsylvania. He completed Bachelors of Science degree in Psychology at Penn
-          State University in 2006. He attended  graduate school at Shippensburg and completed his
-          Masters of Social work in 2017. Chad became a Licensed Social Worker in February of 2019. He
-          has a large background of work experience in the areas of child welfare and inpatient mental
-          health treatment. Chad is an advocate for mental health and wellness and reducing the stigma
-          of receiving mental health treatment.
-        </p><p>
-          Chad has a strong focus on helping children and families to identify therapeutic needs and
-          working collaboratively on finding solutions through the use of CBT, mindfulness, and Narrative
-          based approaches. He also has a strong interest in the area of trauma, it's subjectivity, and
-          it's effects on development and perception
-        </p><p>
-          Chad spends his free time at home attempting to be an amateur landscaper, hiking, watching
-          movies, or enjoying live music. He's also a wanna be foodie so he's always looking for unique
-          and creative cuisine. Chad also has a passion for the performing arts and has done live theater
-          for many years including several dinner theater shows. He is a self professed game show lover
-          and enjoys watching and participating in trivia shows. Chad has tried out for both Teen
-          Jeopardy and Who Wants to Be A Millionaire. Sadly he didn't make it past the initial round but
-          that hasn't stopped him from continuing to try.
         </p>
       </section>
       <section>
@@ -246,29 +254,38 @@
         </p>
       </section>
       <section>
-        <h2>Katie Green, Clinician</h2>
-        <img class="headshot" src="images/KatieGreen.jpg" alt="Picture of Katie Green">
+        <h2>Selene Scavitto, Clinician</h2>
+        <img class="headshot" src="images/SeleneScavitto.jpg" alt="Picture of Selene Scavito">
         <p>
-          Kathleen (Katie) Green graduated from Shippensburg University in 2010 with her Bachelor of
-          Science in Psychology. In 2018 she obtained her Masters graduate degree in Social Work and
-          became a licensed social worker in February of 2019. 
+          Selene graduated from Shippensburg University with her MSW and currently is a LSW. Selene has
+          experience working in a variety of settings including as Director of Social Services at a
+          Continuing Care Retirement Community, hospital setting, and outpatient private practice. She
+          enjoys working with adolescents and adults, helping them find their way through life's
+          challenges, by teaching new ways to cope and setting realistic goals. She strives to offer a
+          non-judgmental, culturally sensitive environment conducive to exploration and growth.
         </p><p>
-          Katie has clinical experience treating individuals, couples, families, and groups in multiple
-          behavioral health care settings over the past 10 years. She has had experience in such settings
-          as an inpatient psychiatric hospital, home care settings, and in the school setting. Her
-          experience in the inpatient psychiatric hospital has helped her develop an understanding and
-          sensitivity to the needs of vulnerable populations and is trained in cultural competency
-          awareness. She is sensitive of and affirming of individuals experiencing (LGBTQ+) gender
-          identity issues. Katie takes a holistic approach, viewing the client as the center of treatment
-          and recognizes that each individual’s journey is different and unique. Katie has received formal
-          training and has experience in various therapy processes such as Dialectical Behavioral Therapy,
-          Cognitive Behavioral Therapy, Interpersonal Therapy, and Family Therapies. She is able to take a
-          creative approach that endeavors to foster rapport, trust, empathy, and respect within the
-          therapeutic relationship.
+          In her spare time, Selene enjoys spending time with her family and is active in raising
+          awareness of the mental health needs of military members and veterans. Selene coordinates
+          a yearly Ruck March which supports efforts in the fight against suicide. The March raises
+          funds for non-profit organizations that serve veterans and to raises awareness regarding the
+          prevalence of veteran suicide and mental health issues. 
+        </p>
+      </section>
+      <section>
+        <h2>Chelsea Senic, Clinician</h2>
+        <img class="headshot" src="images/ChelseaSenic.jpg" alt="Picture of Chelsea Senic">
+        <p>
+          Chelsea is a Licensed Social Worker who received her BS in Communications and Master's of Social
+          Work from Millersville University. 
+        </p><p>
+          Chelsea has been in the Human Services field for approximately ten years. She has experience in a
+          variety of fields, including but not limited to: Mental Health, Drug and Alcohol, Trauma, Marriage
+          Counseling, Inmate and Re-entry Services, Gender Identity, LGBTQIA+, and grief and loss. Chelsea
+          works with children and adults over the age of 12 and uses a plethora of theories and practices to
+          help motivate and empower the client.
         </p><p>      
-          In her spare time, Katie enjoys traveling to different states and exploring national parks with
-          her family. She enjoys spending time with her dog, taking him for walks, and photography. When she
-          isn’t outside enjoying the fresh air, she can be found watching movies or attending live concerts.     
+          Chelsea spends her free time with her new husband and their furry friend Frankie: hiking, walking
+          and being outdoors. She also enjoys theatre, hockey and interior design.     
         </p>
       </section>
     </div>
