--- a/contact-us.html
+++ b/contact-us.html
@@ -9,7 +9,7 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
-  <title>Northeastern Counseling Services | Ellicott City, MD | Mechanicsburg, PA</title>
+  <title>Northeastern Counseling Services | Mechanicsburg, PA | Ellicott City, MD</title>
 </head>
 <body>
   <header>
@@ -36,6 +36,9 @@
     <div class="container">
       <h1>Contact Us</h1>
       <p>
+        <em>At this time, we are not accepting new clients at our Maryland location.</em>
+      </p>
+      <p>
         You may leave us a confidential voice mail or send an email. Please remember that email is
         not a confidential method of communication, so security cannot be guarenteed and delivery times
         are often unreliable. In order to protect your confidentiality, we do not communicate about
@@ -60,7 +63,7 @@
           </p>
         </div>
         <div class="col-md-6">
-            <iframe width="360" height="310" frameborder="0"
+            <iframe width="360" height="310" frameborder="0" title="PA location map"
             src="https://www.bing.com/maps/embed?h=310&w=360&cp=40.225540~-76.972755&lvl=12&typ=d&sty=r&src=SHELL&FORM=MBEDJS&pp=5021%20E%20Trindle%20Rd%2c%20Mechanicsburg%2c%20PA%2017050~~40.225540~-76.972755" scrolling="no"></iframe>
         </div>
       </div>
@@ -82,7 +85,7 @@
           </p>
         </div>
         <div class="col-md-6">
-          <iframe width="360" height="310" frameborder="0"
+          <iframe width="360" height="310" frameborder="0" title="MD location map"
             src="https://www.bing.com/maps/embed?h=310&w=360&cp=39.278050~-76.825120&lvl=12&typ=d&sty=r&src=SHELL&FORM=MBEDJS&pp=3355%20St.%20John%27s%20Ln%20Suite%20F%20Ellicott%20City%2C%20MD%2021045~~39.278050~-76.825120" scrolling="no"></iframe>
         </div>
       </div>
