--- a/teletherapy.html
+++ b/teletherapy.html
@@ -9,7 +9,7 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
-  <title>Northeastern Counseling Services | Ellicott City, MD | Mechanicsburg, PA</title>
+  <title>Northeastern Counseling Services | Mechanicsburg, PA | Ellicott City, MD</title>
 </head>
 <body>
   <header>
@@ -105,6 +105,9 @@
           teletherapy for years and have seen first-hand the benefits it can provide. In times of uncertainty, where the
           need for flexibility in accessing behavioral healthcare is vital, we are honored to be able to continue to
           provide support for you in this format.
+        </p>
+        <p>
+          If you are interested in teletherapy, or have additional questions please don't hesitate to <a href="contact-us.html">contact us</a> for more information.
         </p>
       </section>
       <section>
