--- a/eating-disorder-myths.html
+++ b/eating-disorder-myths.html
@@ -10,7 +10,7 @@
     <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
-  <title>Northeastern Counseling Services | Ellicott City, MD | Mechanicsburg, PA</title>
+  <title>Northeastern Counseling Services | Mechanicsburg, PA | Ellicott City, MD</title>
 </head>
 <body>
   <header>
