--- a/contact-us.html
+++ b/contact-us.html
@@ -9,7 +9,7 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
-  <title>Northeastern Counseling Services | Mechanicsburg, PA | Ellicott City, MD</title>
+  <title>Northeastern Counseling Services | Mechanicsburg, PA | Camp Hill, PA</title>
 </head>
 <body>
   <header>
@@ -49,7 +49,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h2>PA Office Address</h2>
+          <h2>Main Office Address</h2>
           <p>
             5021 East Trindle Rd
           <br>
@@ -63,19 +63,19 @@
           </p>
         </div>
         <div class="col-md-6">
-            <iframe width="360" height="310" frameborder="0" title="PA location map"
+            <iframe width="360" height="310" frameborder="0" title="Main office location map"
             src="https://www.bing.com/maps/embed?h=310&w=360&cp=40.225540~-76.972755&lvl=12&typ=d&sty=r&src=SHELL&FORM=MBEDJS&pp=5021%20E%20Trindle%20Rd%2c%20Mechanicsburg%2c%20PA%2017050~~40.225540~-76.972755" scrolling="no"></iframe>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <h2>MD Office Address</h2>
+          <h2>Branch Office Address</h2>
           <p>
-            3355 St. John's Ln
+            3705 Trindle Rd
           <br>
-            Suite F
+            Suite 140
           <br>
-            Ellicott City, MD 21045
+            Camp Hill, PA 17011
           </p><p>
             Voice: <a href="tel:717-406-5190​" title="Voice phone">717-406-5190​</a>
           </p><p>
@@ -85,7 +85,7 @@
           </p>
         </div>
         <div class="col-md-6">
-          <iframe width="360" height="310" frameborder="0" title="MD location map"
+          <iframe width="360" height="310" frameborder="0" title="Branch office location map"
             src="https://www.bing.com/maps/embed?h=310&w=360&cp=39.278050~-76.825120&lvl=12&typ=d&sty=r&src=SHELL&FORM=MBEDJS&pp=3355%20St.%20John%27s%20Ln%20Suite%20F%20Ellicott%20City%2C%20MD%2021045~~39.278050~-76.825120" scrolling="no"></iframe>
         </div>
       </div>
@@ -94,7 +94,7 @@
     <div class="container wrap text-center">
       <p class="text-muted-custom">
         5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
-        3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
+        3705&nbsp;Trindle&nbsp;Rd&nbsp;Suite&nbsp;140&nbsp;Camp&nbsp;Hill,&nbsp;PA&nbsp;17011
       </p>
     </div>
   </footer>
