--- a/teletherapy.html
+++ b/teletherapy.html
@@ -9,7 +9,7 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
-  <title>Northeastern Counseling Services | Mechanicsburg, PA | Ellicott City, MD</title>
+  <title>Northeastern Counseling Services | Mechanicsburg, PA | Camp Hill, PA</title>
 </head>
 <body>
   <header>
@@ -124,6 +124,7 @@
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/denisehaasncs" title="Virtual therapy link for Denise Haas"><img alt="doxy" src="images/doxy.png"/>Denise Haas</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/rachelmailey" title="Virtual therapy link for Rachel Mailey"><img alt="doxy" src="images/doxy.png"/>Rachel Mailey</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/selenescavittoncs" title="Virtual therapy link for Selene Scavitto"><img alt="doxy" src="images/doxy.png"/>Selene Scavitto</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeastern" title="Virtual therapy link for Chelsea Senic"><img alt="doxy" src="images/doxy.png"/>Chelsea Senic</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeasterncounselingservices" title="Virtual therapy link for Nicole Woods"><img alt="doxy" src="images/doxy.png"/>Nicole Woods</a>
         </div>
       </section>
@@ -163,7 +164,7 @@
     <div class="container wrap text-center">
       <p class="text-muted-custom">
         5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
-        3355&nbsp;St.&nbsp;John's&nbsp;Ln,&nbsp;Suite&nbsp;F,&nbsp;Ellicott&nbsp;City,&nbsp;MD&nbsp;21042
+        3705&nbsp;Trindle&nbsp;Rd&nbsp;Suite&nbsp;140&nbsp;Camp&nbsp;Hill,&nbsp;PA&nbsp;17011
       </p>
     </div>
   </footer>
