--- a/contact-us.html
+++ b/contact-us.html
@@ -49,7 +49,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h2>Main Office Address</h2>
+          <h2>Mechanicsburg Office Address</h2>
           <p>
             5021 East Trindle Rd
           <br>
@@ -63,13 +63,13 @@
           </p>
         </div>
         <div class="col-md-6">
-            <iframe width="360" height="310" frameborder="0" title="Main office location map"
+            <iframe width="360" height="310" frameborder="0" title="Mechanicsburg office location map"
             src="https://www.bing.com/maps/embed?h=310&w=360&cp=40.225540~-76.972755&lvl=12&typ=d&sty=r&src=SHELL&FORM=MBEDJS&pp=5021%20E%20Trindle%20Rd%2c%20Mechanicsburg%2c%20PA%2017050~~40.225540~-76.972755" scrolling="no"></iframe>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <h2>Branch Office Address</h2>
+          <h2>Camp Hill Office Address</h2>
           <p>
             3705 Trindle Rd
           <br>
@@ -85,8 +85,8 @@
           </p>
         </div>
         <div class="col-md-6">
-          <iframe width="360" height="310" frameborder="0" title="Branch office location map"
-            src="https://www.bing.com/maps/embed?h=310&w=360&cp=39.278050~-76.825120&lvl=12&typ=d&sty=r&src=SHELL&FORM=MBEDJS&pp=3355%20St.%20John%27s%20Ln%20Suite%20F%20Ellicott%20City%2C%20MD%2021045~~39.278050~-76.825120" scrolling="no"></iframe>
+          <iframe width="360" height="310" frameborder="0" title="Camp Hill office location map"
+          src="https://www.bing.com/maps/embed?h=310&w=360&cp=40.234584~-76.944443&lvl=12&typ=d&sty=r&src=SHELL&FORM=MBEDJS&pp=3705%20Trindle%20Rd%20Suite%20140%20Camp%20Hill%2C%20PA%17011~~40.234584~-76.944443" scrolling="no"></iframe>
         </div>
       </div>
   </main>
@@ -94,7 +94,7 @@
     <div class="container wrap text-center">
       <p class="text-muted-custom">
         5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
-        3705&nbsp;Trindle&nbsp;Rd&nbsp;Suite&nbsp;140&nbsp;Camp&nbsp;Hill,&nbsp;PA&nbsp;17011
+        3705&nbsp;Trindle&nbsp;Rd,&nbsp;Suite&nbsp;140,&nbsp;Camp&nbsp;Hill,&nbsp;PA&nbsp;17011
       </p>
     </div>
   </footer>
