--- a/rates-and-insurance.html
+++ b/rates-and-insurance.html
@@ -67,7 +67,7 @@
     <div class="container wrap text-center">
       <p class="text-muted-custom">
         5021&nbsp;East&nbsp;Trindle&nbsp;Road,&nbsp;Mechanicsburg,&nbsp;PA&nbsp;17050 |
-        3705&nbsp;Trindle&nbsp;Rd&nbsp;Suite&nbsp;140&nbsp;Camp&nbsp;Hill,&nbsp;PA&nbsp;17011
+        3705&nbsp;Trindle&nbsp;Rd,&nbsp;Suite&nbsp;140,&nbsp;Camp&nbsp;Hill,&nbsp;PA&nbsp;17011
       </p>
     </div>
   </footer>
