Employee profile update

--- a/about-us.html
+++ b/about-us.html
@@ -279,10 +279,10 @@
           Work from Millersville University. 
         </p><p>
           Chelsea has been in the Human Services field for approximately ten years. She has experience in a
-          variety of fields, including but not limited to: Mental Health, Drug and Alcohol, Trauma, Marriage
-          Counseling, Inmate and Re-entry Services, Gender Identity, LGBTQIA+, and grief and loss. Chelsea
-          works with children and adults over the age of 12 and uses a plethora of theories and practices to
-          help motivate and empower the client.
+          variety of fields, including but not limited to: Mental Health, Drug and Alcohol, Trauma, Eating
+          Disorders, Marriage Counseling, Inmate and Re-entry Services, Gender Identity, LGBTQIA+, and grief
+          and loss. Chelsea works with children and adults over the age of 12 and uses a plethora of theories
+          and practices to help motivate and empower the client.
         </p><p>      
           Chelsea spends her free time with her new husband and their furry friend Frankie: hiking, walking
           and being outdoors. She also enjoys theatre, hockey and interior design.     
