--- a/about-us.html
+++ b/about-us.html
@@ -254,6 +254,23 @@
         </p>
       </section>
       <section>
+        <h2>Chelsea Ranney, Clinician</h2>
+        <img class="headshot" src="images/ChelseaRanney.jpg" alt="Picture of Chelsea Ranney">
+        <p>
+          Chelsea is a Licensed Social Worker who received her BS in Communications and Master's of Social
+          Work from Millersville University. 
+        </p><p>
+          Chelsea has been in the Human Services field for approximately ten years. She has experience in a
+          variety of fields, including but not limited to: Mental Health, Drug and Alcohol, Trauma, Eating
+          Disorders, Marriage Counseling, Inmate and Re-entry Services, Gender Identity, LGBTQIA+, and grief
+          and loss. Chelsea works with children and adults over the age of 12 and uses a plethora of theories
+          and practices to help motivate and empower the client.
+        </p><p>      
+          Chelsea spends her free time with her new husband and their furry friend Frankie: hiking, walking
+          and being outdoors. She also enjoys theatre, hockey and interior design.     
+        </p>
+      </section>
+      <section>
         <h2>Selene Scavitto, Clinician</h2>
         <img class="headshot" src="images/SeleneScavitto.jpg" alt="Picture of Selene Scavito">
         <p>
@@ -269,23 +286,6 @@
           a yearly Ruck March which supports efforts in the fight against suicide. The March raises
           funds for non-profit organizations that serve veterans and to raises awareness regarding the
           prevalence of veteran suicide and mental health issues. 
-        </p>
-      </section>
-      <section>
-        <h2>Chelsea Senic, Clinician</h2>
-        <img class="headshot" src="images/ChelseaSenic.jpg" alt="Picture of Chelsea Senic">
-        <p>
-          Chelsea is a Licensed Social Worker who received her BS in Communications and Master's of Social
-          Work from Millersville University. 
-        </p><p>
-          Chelsea has been in the Human Services field for approximately ten years. She has experience in a
-          variety of fields, including but not limited to: Mental Health, Drug and Alcohol, Trauma, Eating
-          Disorders, Marriage Counseling, Inmate and Re-entry Services, Gender Identity, LGBTQIA+, and grief
-          and loss. Chelsea works with children and adults over the age of 12 and uses a plethora of theories
-          and practices to help motivate and empower the client.
-        </p><p>      
-          Chelsea spends her free time with her new husband and their furry friend Frankie: hiking, walking
-          and being outdoors. She also enjoys theatre, hockey and interior design.     
         </p>
       </section>
     </div>
