update for James and his LCSW

--- a/about-us.html
+++ b/about-us.html
@@ -158,7 +158,7 @@
         <h2>James Corbin, Clinician</h2>
         <img class="headshot" src="images/Jamescorbinpic1.JPG" alt="Picture of James Corbin">
         <p>
-          James R. Corbin has over 20 years of experience working in Pennsylvania as an LSW. James
+          James R. Corbin is an LCSW with over 20 years of experience working in Pennsylvania. James
           received his Masters Degree in Social Work from Temple University and earned his Bachelor of
           Arts Degree in Political Science from the Pennsylvania State University. 
         </p><p>
