updated bio for James

--- a/about-us.html
+++ b/about-us.html
@@ -162,11 +162,17 @@
           received his Masters Degree in Social Work from Temple University and earned his Bachelor of
           Arts Degree in Political Science from the Pennsylvania State University. 
         </p><p>
-          James possesses a specialty in treating childhood mental illness and has received training in
-          child centered play therapy. He also specializes in providing individual and family therapy
-          with children, adolescents, and their families.  Since 2008, he has served as a full-time
-          clinical faculty and instructor in the Graduate School of Social Work at Temple University and
-          currently serves as their Assistant MSW Program Director. 
+          James completed post-graduate work in clinical social work at the Clinical Social Work Institute in
+          Washington DC including advanced psychodynamic training and supervision. He also possesses a
+          specialty in treating childhood mental illness and has received training in child centered play
+          therapy. He works with both adults and children and specializes in providing individual and family
+          therapy with children, adolescents, adults, and their families. He also works extensively with
+          adults experiencing life transitions, parenting challenges, relationship strain, and loss including
+          military service members and their families. James is currently a part-time adjunct professor at
+          Sacred Heart University in their Masters in Social Work program teaching in their advanced practice
+          courses as well as their advanced research course. He had previously served as a full-time clinical
+          faculty and instructor in the Graduate School of Social Work at Temple University and was formerly
+          Assistant MSW Program Director. 
         </p><p>
           Mr. Corbin has written and presented extensively on the subject of neuroscience, trauma, and
           attachment and the impact on clinical practice. He is a volunteer therapist for 
